--- a/app/views/admin/addProduct.scala.html
+++ b/app/views/admin/addProduct.scala.html
@@ -1,15 +1,15 @@
 @* addProductForm defined above is the parameter passed to this view by the controller *@
 @import helper._
 
-@(addProductForm: play.data.Form[models.Product], user: models.users.User)
+@(addProductForm: play.data.Form[models.Product], user: models.users.User, env: play.api.Environment)
 
 @* helpers will be used to create the form dynamically, though static HTML form element also work. *@
 
 @admin.adminMain("Add Product", user) {
 	<h3>Add a new Product</h3>
-	
 	<!-- Use the views.html.helpers package to create the form -->
-	@form(action = routes.AdminController.addProductSubmit(), 'class -> "form-horizontal", 'role->"form") {
+	@form(action = routes.AdminController.addProductSubmit(), 'class -> "form-horizontal",
+		'role->"form", 'enctype -> "multipart/form-data") {
 		
 		<!-- Build the form, adding an input for each field -->
 		<!-- Note the label parameter -->
@@ -25,6 +25,23 @@
 		)
 		@inputText(addProductForm("stock"), '_label -> "Stock",'class -> "form-control")
 		@inputText(addProductForm("price"), '_label -> "Price",'class -> "form-control")
+
+		<!-- Image upload input -->
+		<div class="container-fluid">
+			<div class="row">
+				<label>Image</label>
+			</div>
+			<div class="row">
+				@if(env.resource("public/images/productImages/thumbnails/" + addProductForm("id").value() + ".jpg").isDefined) {
+					<p><img src="/assets/images/productImages/thumbnails/@(addProductForm("id").value() + ".jpg")"/></p>
+				} else {
+					<p><img src="/assets/images/productImages/thumbnails/noImage.png"/></p>
+				}
+			</div>
+			<div class="row">
+				<input class="btn-sm btn-default" type="file" name="upload">
+			</div>
+		</div>
 
 		<!-- Hidden ID field - required for product updates -->
 		@inputText(addProductForm("id"), '_label -> "", 'hidden -> "hidden")
