--- a/app/views/admin/adminMain.scala.html
+++ b/app/views/admin/adminMain.scala.html
@@ -17,7 +17,7 @@
     <nav class="navbar navbar-inverse">
             <!-- nav header/ branding -->
             <div class="navbar-header">
-                <a class="navbar-brand" href="/">Product Admin</a>
+                <a class="navbar-brand" href="/admin/products">Product Admin</a>
             </div>
             <!-- List containing nav links -->
             <ul class="nav navbar-nav">
